# UNIX

./: CMakeLists.txt  README.md  everything.h  impulse-sweep.cpp  impulse.cpp  sawtooth-sweep.cpp  sawtooth.cpp  sine-sweep.cpp  sine.cpp  square-sweep.cpp  square.cpp  triangle-sweep.cpp  triangle.cpp  wav-read.cpp  wav-write.cpp
